--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Sam’s about me page 1</title>
+<title>Samâ€™s about me page 1</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,6 +31,6 @@ body {font-family: "Open Sans"}
 	<h1 class="w3-xxxlarge"><b>SAMANTHA'S BLOGLIFE</b></h1>
 	<h6>Welcome to the blog of <span class="w3-tag">SAMANTHA'S WORLD</span></h6>
 </header>
-<img src="IMG_3776.jpg"width="300px" height="300px">
+<img src="IMG_3776.JPG"width="300px" height="300px">
  {<p style="text-align:center;">The life of the fabulous Samantha Fortunato it's a guarantee you will be entertained with what you will see and this is just the beginning!</p>
 	
