--- a/websitepg5.html
+++ b/websitepg5.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Sam’s about me page 5</title>
+<title>Samâ€™s about me page 5</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,7 +34,7 @@ body {font-family: "Open Sans"}
 
 
 
-<p style="text-align:Center;"> <b> My two fav social media websites (add me btw on snapchat) </b> 
+<p style="text-align:Center;"> <b> My two fav social media websites (add me on snapchat) </b> 
 
 
 
