--- a/websitepg5.html
+++ b/websitepg5.html
@@ -29,7 +29,7 @@ body {font-family: "Open Sans"}
 	<h6>Welcome to the blog of <span class="w3-tag">SAMANTHA'S WORLD</span></h6>
 </header>
 
-<img src="snapchat.png" align="middle" width="300px" height="300px">
+<img src="snapchat.PNG" align="middle" width="300px" height="300px">
 <img src="thegram.png" align="right" width="300px" heighr="300px">
 
 
