--- a/index.html
+++ b/index.html
@@ -32,5 +32,5 @@ body {font-family: "Open Sans"}
 	<h6>Welcome to the blog of <span class="w3-tag">SAMANTHA'S WORLD</span></h6>
 </header>
 <img src="IMG_3776.JPG"width="300px" height="300px">
- {<p style="text-align:center;">The life of the fabulous Samantha Fortunato it's a guarantee you will be entertained with what you will see and this is just the beginning!</p>
+ <p style="text-align:center;">The life of the fabulous Samantha Fortunato it's a guarantee you will be entertained with what you will see and this is just the beginning!</p>
 	
